# schema-travels

./: .coverage  .gitignore  ARCHITECTURE.md  ARCHITECTURE.mermaid  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  env.example  pyproject.toml  run_test.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: ecommerce_extended_schema.sql  ecommerce_schema.sql
src/schema_travels/: __init__.py  config.py
src/schema_travels/analyzer/: __init__.py  hot_joins.py  models.py  mutations.py  pattern_analyzer.py
src/schema_travels/cli/: __init__.py  main.py
src/schema_travels/collector/: __init__.py  log_parser.py  models.py  schema_parser.py
src/schema_travels/persistence/: __init__.py  database.py  repository.py
src/schema_travels/recommender/: __init__.py  cache.py  claude_advisor.py  models.py  query_rewriter.py  schema_generator.py
src/schema_travels/simulator/: __init__.py  cost_model.py  models.py  simulator.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cache.py  test_cli.py  test_collector.py  test_query_rewriter.py
tools/: generate_workload.py  visualize_schema.py
