[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-travels"
version = "1.1.0"
description = "Intelligent SQL to NoSQL schema migration - analyzes query patterns to recommend optimal MongoDB schema design"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Karthik Raghavan"}
]
maintainers = [
    {name = "Karthik Raghavan"}
]
keywords = [
    "database",
    "migration", 
    "nosql",
    "mongodb",
    "postgresql",
    "mysql",
    "schema",
    "sql",
    "data-modeling",
    "etl",
    "ai",
    "claude",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "sqlglot>=20.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
schema-travels = "schema_travels.cli.main:cli"

[project.urls]
Homepage = "https://github.com/kraghavan/schema-travels"
Documentation = "https://github.com/kraghavan/schema-travels#readme"
Repository = "https://github.com/kraghavan/schema-travels.git"
Issues = "https://github.com/kraghavan/schema-travels/issues"
Changelog = "https://github.com/kraghavan/schema-travels/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
schema_travels = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["schema_travels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=schema_travels --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
packages = ["schema_travels"]

[tool.coverage.run]
source = ["src/schema_travels"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
